# Roxide

./: Cargo.toml  README.md  Rocket.toml  TODO.md  flake.nix
front/: Cargo.toml  index.html
front/src/: main.rs
roxide-backend/: Cargo.toml
roxide-backend/src/: main.rs  user.rs
roxide-frontend/: Cargo.toml
roxide-frontend/src/: main.rs
server/: Cargo.toml  TODO.md
server/src/: main.rs  user.rs
src/: file_id.rs  image_id.rs  main.rs  user.rs
