[package]
name = "roxide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
rocket = "0.5.0-rc.2"
tokio = { version = "1.20.1", features = ["full"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }
